# ROSMonitoring

./: .gitignore  LICENSE  LICENSE-3RD-PARTY.md  README.md  generator.py  pyproject.toml
auxiliary_files/: monitor_function.txt  reordering_inits_and_functions.txt
docs/: architecture.md  implementation_history.md  test_plan.md
evaluation/: generate_experiment
examples/: README.md
examples/jackal/: README.md
examples/oracle_runs/: chatter_bad.jsonl  chatter_good.jsonl  rml_mixed.jsonl
examples/oracles/: tutorial_oracle.py
generator/: ariac_config.yaml  config.yaml  config_eval.yaml  generator  generator.py  offline_config.yaml  offline_config_err.yaml  online_config.yaml  online_config_services.yaml  online_config_services_silent_ordered.yaml  probabilistic.yaml  radiation.yaml  radiation_fol.yaml  rvaft.yaml  tutorial.yaml
generator/ros2_devel/code/monitor/: .packagexml  package.xml  setup.cfg  setup.py  setup_resources.py
generator/ros2_devel/code/monitor/launch/: monitor.launch
generator/ros2_devel/code/monitor/monitor/: monitor_0.py  monitor_battery_status.py  test_publisher_monitor_error_msg.py  test_subscriber_monitor_error_msg.py  testmon_default_offline_2mon_0.py  testmon_default_offline_2mon_1.py  testmon_default_offline_silent.py
instrumentation/: config.yaml  generator  generator.py
monitor/: CMakeLists.txt  package.xml  run.launch  run_instrumented.launch
service_eg/: CMakeLists.txt  package.xml
tests/: ros1_docker_smoke.sh  test_cli.py  test_config.py  test_events.py  test_examples_catalog.py  test_generator.py  test_legacy_oracle_tree.py  test_ros2_integration.py  test_status.py
(+191 files in other folders)
