<package format="3">
  <name>monitor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="angelo.ferrando42@gmail.com">parallels</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosmonitoring_interfaces</exec_depend>

  <exec_depend>std_msgs</exec_depend><export>
    <build_type>ament_python</build_type>
  </export>
</package>